--- a/APITestingUsingUnirest/test-output/old/API Automation test run/classes.html
+++ b/APITestingUsingUnirest/test-output/old/API Automation test run/classes.html
@@ -196,13 +196,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>UC_FD_50_TC_1_adddnrs</td>
-<td>frontdeskcreate </td>
+<td>UC_AD_15_TC_1_saveemailconfiguration</td>
+<td>admincreate </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>UC_AD_15_TC_1_saveemailconfiguration</td>
-<td>admincreate </td>
+<td>UC_FD_50_TC_1_adddnrs</td>
+<td>frontdeskcreate </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -232,7 +232,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>UC_FD_34_TC_1_unassignroom</td>
-<td>tst11 </td>
+<td>frontdeskview </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
